compiler/testData/cli/jvm/enumEntriesForJavaNotEnabled.out
compiler/testData/cli/jvm/enumEntriesForJavaNotEnabled.kt:4:49: error: unresolved reference: entries
    val entries = java.util.concurrent.TimeUnit.entries
                                                ^
COMPILATION_ERROR
